feat: add bounded gm rest transport adapter