@@ -63,9 +63,16 @@ public final class ZeroArchitectureGuard {
             "zero-protocol",
             "zero-codegen",
             "zero-actor",
+            "zero-world",
+            "zero-npc",
+            "zero-ranking",
+            "zero-room",
             "zero-game",
             "zero-player",
             "zero-scene",
+            "zero-aoi",
+            "zero-state-sync",
+            "zero-frame-sync",
             "zero-logic",
             "zero-net",
             "zero-rpc-common",
@@ -80,6 +87,7 @@ public final class ZeroArchitectureGuard {
             "zero-log",
             "zero-monitor",
             "zero-gm",
+            "zero-gm-rest",
             "zero-hot-update",
             "zero-server-starter",
             "zero-server-starter-production");
@@ -141,9 +149,6 @@ public final class ZeroArchitectureGuard {
             "kafka",
             "nacos");
 
-    /**
-     * Actor 模块禁止直接绑定的上层或中间件关键词。
-     */
     private static final Set<String> ACTOR_FORBIDDEN_KEYWORDS = Set.of(
             "zero-rpc",
             "kafka",
@@ -152,6 +157,19 @@ public final class ZeroArchitectureGuard {
             "mongo",
             "postgres",
             "netty");
+
+    /**
+     * Room 模块必须保持的直接依赖集合。
+     */
+    private static final Set<String> ROOM_ALLOWED_MODULES = Set.of("zero-actor");
+
+
+    /**
+     * Room 模块禁止直接绑定的中间件或上层模块关键词。
+     */
+    private static final Set<String> ROOM_FORBIDDEN_KEYWORDS = Set.of(
+            "zero-rpc", "zero-data", "zero-cache", "zero-discovery", "zero-server-starter",
+            "kafka", "nacos", "redis", "mongo", "postgres", "netty");
 
     /**
      * 需要在 module-map 文档中持续可定位的关键文本。
@@ -163,6 +181,8 @@ public final class ZeroArchitectureGuard {
             "zero-server-starter-production",
             "zero-rpc",
             "zero-actor",
+            "zero-world",
+            "zero-room",
             "zero-data",
             "zero-rpc-kafka",
             "zero-discovery-nacos",
@@ -206,6 +226,7 @@ public final class ZeroArchitectureGuard {
         checkFoundationBoundaries(report);
         checkRpcBoundary(report);
         checkActorBoundary(report);
+        checkRoomBoundary(report);
         checkDataBoundary(report);
         checkStarterBoundary(report);
         checkProductionStarterBoundary(report);
@@ -215,7 +236,22 @@ public final class ZeroArchitectureGuard {
         checkBenchmarkProfile(report, rootModules, rootProfiles);
         checkBenchmarkModuleBoundary(report);
         checkModuleMap(report);
+        checkFrameworkBoundary(report);
         return report;
+    }
+
+    private static void checkFrameworkBoundary(final GuardReport report) throws IOException {
+        Path script = Path.of("scripts", "ZeroFrameworkBoundaryGuard.java");
+        if (!Files.isRegularFile(script)) {
+            report.fail("framework-boundary-guard", "Missing framework boundary guard: " + script);
+            return;
+        }
+        String source = Files.readString(script, StandardCharsets.UTF_8);
+        if (!source.contains("prototype") || !source.contains("connectsExternalMiddleware")) {
+            report.fail("framework-boundary-guard", "Boundary guard must check scaffold prototype and middleware metadata.");
+        } else {
+            report.pass("framework-boundary-guard", "Framework/template boundary guard is present and checks non-production scaffolds.");
+        }
     }
 
     private static void checkRepositoryRoot(final GuardReport report) {
@@ -300,8 +336,8 @@ public final class ZeroArchitectureGuard {
                 .filter(dependency -> !dependency.isTestOnly())
                 .toList();
         boolean onlyDependsOnCore = nonTestDependencies.size() == 1
-                && "group.zn.zero".equals(nonTestDependencies.getFirst().groupId())
-                && "zero-core".equals(nonTestDependencies.getFirst().artifactId());
+                && "group.zn.zero".equals(nonTestDependencies.get(0).groupId())
+                && "zero-core".equals(nonTestDependencies.get(0).artifactId());
         if (onlyDependsOnCore) {
             report.pass("zero-runtime-boundary", "zero-runtime directly depends only on zero-core at runtime.");
         } else {
@@ -350,6 +386,24 @@ public final class ZeroArchitectureGuard {
         } else {
             report.fail("zero-actor-boundary", "zero-actor has forbidden direct dependencies: "
                     + dependencyNames(forbidden));
+        }
+    }
+
+    private static void checkRoomBoundary(final GuardReport report) throws IOException {
+        List<Dependency> dependencies = dependenciesOf(report, "zero-room").stream()
+                .filter(dependency -> !dependency.isTestOnly())
+                .toList();
+        List<Dependency> unexpected = dependencies.stream()
+                .filter(dependency -> !ROOM_ALLOWED_MODULES.contains(dependency.artifactId()))
+                .toList();
+        List<Dependency> forbidden = dependencies.stream()
+                .filter(ZeroArchitectureGuard::matchesRoomForbidden)
+                .toList();
+        if (unexpected.isEmpty() && forbidden.isEmpty()) {
+            report.pass("zero-room-boundary", "zero-room depends only on zero-actor and stays middleware-free.");
+        } else {
+            report.fail("zero-room-boundary", "zero-room has forbidden direct dependencies: "
+                    + dependencyNames(unexpected.isEmpty() ? forbidden : unexpected));
         }
     }
 
@@ -567,9 +621,9 @@ public final class ZeroArchitectureGuard {
                 .toList();
         boolean defaultReactorClean = !rootModules.contains(BENCHMARK_MODULE);
         boolean singleFrozenProfile = owners.size() == 1
-                && "benchmarks".equals(owners.getFirst().id())
-                && owners.getFirst().modules().equals(List.of(BENCHMARK_MODULE))
-                && !owners.getFirst().activationConfigured();
+                && "benchmarks".equals(owners.get(0).id())
+                && owners.get(0).modules().equals(List.of(BENCHMARK_MODULE))
+                && !owners.get(0).activationConfigured();
         if (defaultReactorClean && singleFrozenProfile) {
             report.pass("benchmark-profile", "zero-benchmarks is enabled only by the root benchmarks profile.");
         } else {
@@ -593,6 +647,11 @@ public final class ZeroArchitectureGuard {
                     && "compile".equals(dependency.scope())
                     && isFrozenJmhVersion(dependency.version())) {
                 jmhCorePresent = true;
+            } else if ("group.zn.zero".equals(dependency.groupId())
+                    && "zero-protocol".equals(dependency.artifactId())
+                    && "test".equals(dependency.scope())) {
+                // The opt-in protocol gate exercises codec classes without adding the
+                // protocol module to the runtime class path of the benchmark artifact.
             } else {
                 unexpected.add(dependency);
             }
@@ -600,7 +659,7 @@ public final class ZeroArchitectureGuard {
         BenchmarkJmhMetadata metadata = readBenchmarkJmhMetadata(report);
         boolean frozen = runtimeModules.equals(BENCHMARK_RUNTIME_MODULES)
                 && jmhCorePresent
-                && dependencies.size() == BENCHMARK_RUNTIME_MODULES.size() + 1
+                && dependencies.size() == BENCHMARK_RUNTIME_MODULES.size() + 2
                 && unexpected.isEmpty()
                 && JMH_VERSION.equals(metadata.propertyVersion())
                 && metadata.artifacts().equals(BENCHMARK_JMH_ARTIFACTS)
@@ -663,6 +722,16 @@ public final class ZeroArchitectureGuard {
     private static boolean matchesActorForbidden(final Dependency dependency) {
         String value = dependency.searchText();
         for (String keyword : ACTOR_FORBIDDEN_KEYWORDS) {
+            if (value.contains(keyword)) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    private static boolean matchesRoomForbidden(final Dependency dependency) {
+        String value = dependency.searchText();
+        for (String keyword : ROOM_FORBIDDEN_KEYWORDS) {
             if (value.contains(keyword)) {
                 return true;
             }
@@ -925,12 +994,14 @@ public final class ZeroArchitectureGuard {
         System.out.println("  zero-core dependency-free boundary");
         System.out.println("  zero-runtime single zero-core dependency boundary");
         System.out.println("  zero-event / zero-protocol / zero-actor foundational dependencies");
+        System.out.println("  zero-room local room dependency and middleware-free boundary");
         System.out.println("  zero-rpc, zero-actor and zero-data forbidden dependency boundaries");
         System.out.println("  zero-server-starter local/default adapter boundary");
         System.out.println("  zero-server-starter-production explicit adapter opt-in boundary");
         System.out.println("  observability dependency direction and terminal LogSink source boundary");
         System.out.println("  opt-in zero-benchmarks profile, dependency set and JMH 1.37 boundary");
         System.out.println("  docs/module-map.md guarded anchors");
+        System.out.println("  framework/template boundary and non-production scaffold markers");
         System.out.println();
         System.out.println("This tool is read-only. It does not modify POM/source files, create modules, run Docker "
                 + "or prove production readiness.");
